--- a/TeamThreeProject/nbproject/project.properties
+++ b/TeamThreeProject/nbproject/project.properties
@@ -34,7 +34,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.hamcrest.classpath}:\
     ${libs.junit_4.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.JSON.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
